   * Lighting setting similar to that of old editor, with presets from a
     (hardcoded) list of time_of_days. Can change the settings and see the
     effects without having to close the settings dialog. The preferences
     are shared with the old editor.
   * Auto update transitions option is stored in the preferences
   * Removed map flipping
   * Added clipboard flipping
 * Graphics:
   * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
 * Language and i18n:
   * Fixed a problem under Windows where the locales detection didn't
     work; all languages are now enabled for Windows.
   * Made it possible to translate ability names according to the
     unit/unit_type's gender (feature #11982).
   * updated translations: Finnish, German, Hungarian, Lithuanian, Slovak, Valencian
 * Multiplayer:
   * Revised maps: Fallenstar Lake, 2p Hamlets, Hornshark Island, The Freelands.
 * Units:
   * Balancing changes:
     * Made units with the healthy trait take a quarter less damage from
       poison instead of half.
 * User interface:
   * Various minor cleanups and refactoring of the new widgets.
   * Added a new scroll label widget.
   * Allowed usage of wildcards (? and *) in friend and ignore lists.
   * Allowed usage of lists in /friend, /ignore and /remove commands. (feature
     #7492)
   * Added a new image widget.
   * Added a feature to draw hex coordinates and/or terrain code on every hex.
     Available in-game via :sc and :tc commands, and in editor2's menu.
 * WML engine:
   * New command, [store_time_of_day], makes it possible to store ToD info
     in a WML array/container.
   * Changed underlying_id in unit to be unique number
 * AI
   * Made it possible to use formula AI for recruiting when using default ai
   * Changed defaults for AI parameters: village_value, villages_per_scout,
     protect_leader, protect_leader_radius, leader_value
   * Added new ai paramater number_of_possible_recruits_to_force_recruit which