@@ -8,6 +8,8 @@ Version 1.5.4+svn:
 	  values via sliders, available in the new editor settings dialog.
 	* Removed map flipping feature. Added clipboard flipping instead, which
       works much more reliably.
+    * Added --load support for -e command line option. Loads the map file
+      with the given filename.
 
   * Language and translations
     * updated translations: Finnish, German, Lithuanian, Slovak, Valencian.
